# rag-search-engine

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
app/: config.py  dependencies.py  main.py
app/models/: document.py  evaluation.py  rag.py  search.py
app/monitoring/: logger.py
app/preprocessing/: chunking.py  enrichment.py  normalizer.py  pipeline.py  pos_tagger.py  text_cleaner.py  tokenizer.py
app/retrieval/: query_enhancement.py
app/routes/: upload.py
app/services/: document_service.py  embedding.py  embedding_service.py  qdrant_init.py  query_enhancement.py  reranking.py  reranking_service.py  search.py  search_service.py  vector_store.py
