[tool.poetry]
name = "rag-search-engine"
version = "1.0.0"
description = "Production-grade RAG system with advanced NLP"
authors = ["mdombrov-33 <maksymdombrov@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"

# Web Framework
fastapi = "^0.119.0"
uvicorn = {extras = ["standard"], version = "0.37.0"}
python-multipart = "^0.0.20"

# Pydantic
pydantic = "^2.5.0"
pydantic-settings = "^2.11.0"

# NLP & Text Processing
nltk = "^3.8.1"
spacy = "^3.7.5"
scikit-learn = "^1.7.2"

# Search & Embeddings
qdrant-client = "^1.15.1"
openai = "^2.5.0"
rank-bm25 = "^0.2.2"

# Monitoring & Observability
langfuse = "^3.7.0"
prometheus-client = "^0.23.1"
structlog = "^25.4.0"

# File Processing
pypdf = "^6.1.1"
python-docx = "^1.1.0"
pandas = "^2.2.0"

# Utilities
python-dotenv = "^1.0.0"
httpx = "^0.28.1"
aiofiles = "^25.1.0"
isort = "^7.0.0"
types-aiofiles = "^25.1.0.20251011"
pandas-stubs = "^2.3.2.250926"
tiktoken = "^0.12.0"

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^8.0.0"
pytest-asyncio = "^1.2.0"
pytest-cov = "^7.0.0"

# Code Quality
black = "^25.9.0"
ruff = "^0.14.1"
mypy = "^1.18.2"
pre-commit = "^4.3.0"

# Development
ipython = "^9.6.0"
jupyter = "^1.0.0"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=app --cov-report=html --cov-report=term"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"